--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,8 @@
    "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    for name in fork_fig"
+    "    for name in fork_fig\n",
+    "    print"
    ]
   },
   {
