Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -196,22 +196,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-6-064ca52f87dc>, line 2)",
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-7-ceb6a8702bc9>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-064ca52f87dc>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    for name in fork_fig\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-ceb6a8702bc9>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    print(\"name\")\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
      ]
     }
    ],
    "source": [
     "def restaurant_name(restaurant):\n",
     "    for name in fork_fig:\n",
-    "    print(\"name\")"
+    "    print(\"name\")\n",
+    "restaurant_name"
    ]
   },
   {
