Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -196,23 +196,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-7-ceb6a8702bc9>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-ceb6a8702bc9>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    print(\"name\")\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    for name in fork_fig:\n",
-    "    print(\"name\")\n",
-    "restaurant_name"
+    "    return restaurant(\"name\")"
    ]
   },
   {
