--- a/index.ipynb
+++ b/index.ipynb
@@ -408,7 +408,7 @@
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    if len(restaurant[\"price\"]) > len(alternative[\"price\"]):\n",
+    "    if len(restaurant[\"price\"]) < len(alternative[\"price\"]):\n",
     "        return \"False\"\n",
     "    return \"True\"\n",
     "        "
@@ -436,18 +436,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'True'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "is_cheaper(frontier_restaurant, fork_fig) # True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'True'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "is_cheaper(fork_fig, fork_fig) # False"
    ]
