--- a/index.ipynb
+++ b/index.ipynb
@@ -488,7 +488,9 @@
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    if restaurant[\"rating\"] < alternative[\"rating\"]:"
+    "    if restaurant[\"rating\"] < alternative[\"rating\"]:\n",
+    "        return \"False\"\n",
+    "    r"
    ]
   },
   {
