--- a/index.ipynb
+++ b/index.ipynb
@@ -488,7 +488,7 @@
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    if restaurant[\"rating\"] < alternative[\"rating\"]:\n",
+    "    if restaurant[\"rating\"] >\n",
     "        return \"False\"\n",
     "    return\"True\""
    ]
